--- a/src/SimplCommerce.WebHost/appsettings.json
+++ b/src/SimplCommerce.WebHost/appsettings.json
@@ -1,22 +1,22 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SimplCommerce;Trusted_Connection=True;MultipleActiveResultSets=true"
-    "DefaultConnection": "Data Source=41.228.174.120;Initial Catalog=SimpleCommerceLocal;User ID=sa;Password=Ficap2017;MultipleActiveResultSets=True;"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SimplCommerce;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Data Source=41.228.174.120;Initial Catalog=SimplComerceAhmed;User ID=sa;Password=Ficap2017;MultipleActiveResultSets=True;"
 
   },
-  "Authentication": {
-    "Facebook": {
-      "AppId": "1716532045292977",
-      "AppSecret": "dfece01ae919b7b8af23f962a1f87f95"
+  "Authentication" : {
+    "Facebook" : {
+      "AppId" : "1716532045292977",
+      "AppSecret" : "dfece01ae919b7b8af23f962a1f87f95"
     },
-    "Google": {
-      "ClientId": "583825788849-8g42lum4trd5g3319go0iqt6pn30gqlq.apps.googleusercontent.com",
-      "ClientSecret": "X8xIiuNEUjEYfiEfiNrWOfI4"
+    "Google" : {
+      "ClientId" : "583825788849-8g42lum4trd5g3319go0iqt6pn30gqlq.apps.googleusercontent.com",
+      "ClientSecret" : "X8xIiuNEUjEYfiEfiNrWOfI4"
     },
     "Jwt": {
       "Key": "veryVerySecretKey",
       "Issuer": "SimplCommerce",
-      "AccessTokenDurationInMinutes": 30
+      "AccessTokenDurationInMinutes":  30
     }
   },
   "Logging": {
